Lots of things going on pertaining primarily to uninstalling local apps via Setup.ps1
I have reworked a lot of the Select-ApplicationFromJSON

Install app from JSON function works

Uninstall app from CIM or AppXPackage work

However Uninstall app from JSON fails spectacularly

The vars from the entry from the JSON just do not pass the same way that they do when running the uninstall from JSON even though they literally use the same exact sub function. I have no idea why. Hopefully next week it will be super clear to me.

--- a/Templates/ApplicationData_TEMPLATE.json
+++ b/Templates/ApplicationData_TEMPLATE.json
@@ -63,14 +63,14 @@
   {
     "ApplicationName": "MSI-Private-AzureBlob_Example",
     "InstallMethod": "MSI-Private-AzureBlob",
-    "MSIPathFromContainerRoot": "Adobe_Creative_Cloud/install.msi",
-    "DisplayName": "Adobe Creative Cloud",
+    "MSIPathFromContainerRoot": "zz/zz/install.msi",
+    "DisplayName": "TESTESTEST",
     "PreRequisites": ".NET_3.5"
   },
   {
     "ApplicationName": "PreRequisite_Example",
     "InstallMethod": "WinGet",
-    "WinGetID": "Flameshot.Flameshot",
+    "WinGetID": "TESTESTEST",
     "PreRequisites":"Google_Chrome,7zip,Dell_CommandUpdate"
   }
   ]
